objects/Pricing_Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver1_Date__c</fullName>
        <label>Approver1 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2_Date__c</fullName>
        <label>Approver2 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Request_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3_Date__c</fullName>
        <label>Approver3 Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pricing_Request_Item1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <formula>Pricing_Request__r.BU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_UoM__c</fullName>
        <label>Base UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Below_Current_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Below Current Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Below_Floor_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Below Floor Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Below_Floor_Price__c</fullName>
        <label>Below Floor Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Below_Reference_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Below Reference Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Below_Reference_Price__c</fullName>
        <label>Below Reference Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculation_Type_Code__c</fullName>
        <label>Calculation Type Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calculation_Type__c</fullName>
        <label>Calculation Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Calculation_Type_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Quantity</fullName>
                </value>
                <value>
                    <fullName>Fixed Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Code__c</fullName>
        <label>Campaign Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Char_Name__c</fullName>
        <defaultValue>&quot;ZKAL_MKT_NUMBER&quot;</defaultValue>
        <label>Char Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Scale_Code__c</fullName>
        <label>Check Scale Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Check_Scale__c</fullName>
        <label>Check Scale</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Check_Scale_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Descending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ComPartner_Code__c</fullName>
        <label>ComPartner_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComPartner__c</fullName>
        <label>ComPartner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Ptr_Code__c</fullName>
        <label>Comm Ptr Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Ptr__c</fullName>
        <label>Comm Ptr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Condition_Class_Code__c</fullName>
        <label>Condition Class Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Condition_Class__c</fullName>
        <label>Condition Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Condition_Class_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Discount or surcharge</fullName>
                </value>
                <value>
                    <fullName>Prices</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Code__c</fullName>
        <label>Contract Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <description>This field stores the cost price for the material</description>
        <label>Cost Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Mkt_Segment_Code__c</fullName>
        <label>Cust-Mkt-Segment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cust_Mkt_Segment__c</fullName>
        <label>Cust-Mkt-Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy_Code__c</fullName>
        <label>Customer Hierarchy Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy__c</fullName>
        <label>Customer Hierarchy</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Group_Code__c</fullName>
        <label>Customer Price Group Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Group__c</fullName>
        <label>Customer Price Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Price_Payment_Terms__c</fullName>
        <label>Customer Price Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Specific__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Specific</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Margin__c</fullName>
        <formula>IF( ISBLANK( Cost_Price__c ) , NULL , (VALUE(New_Rate__c)-Cost_Price__c )*100/VALUE(New_Rate__c) )</formula>
        <label>Deal Margin</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Revenue__c</fullName>
        <formula>Value(Quantity__c) * Value( New_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination_Country_Code__c</fullName>
        <label>Destination_Country_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Country__c</fullName>
        <label>Destination_Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disc_Ref_No__c</fullName>
        <label>Disc Ref No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disc_Ref__c</fullName>
        <label>Disc Ref.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Channel_Code__c</fullName>
        <label>Dist. Channel Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dist_Channel__c</fullName>
        <label>Dist. Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Code__c</fullName>
        <label>Distributor Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_Name__c</fullName>
        <label>Distributor Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <label>Division Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Currency_Code__c</fullName>
        <label>Document Currency Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Currency__c</fullName>
        <label>Document Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Pricing_Procedure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERP Pricing Procedure</label>
        <referenceTo>ERP_Pricing_Procedure__c</referenceTo>
        <relationshipLabel>Pricing Request Item</relationshipLabel>
        <relationshipName>Pricing_Request_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Sales_Prices_SAP__c</fullName>
        <label>ERP Sales Prices - SAP</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Use_Code__c</fullName>
        <label>End Use Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Use__c</fullName>
        <label>End Use</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User_Code__c</fullName>
        <label>End User Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <label>End User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Indicator__c</fullName>
        <label>Error Indicator</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expire__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expire</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ext_Matl_Grp_Code__c</fullName>
        <description>To store Ext Matl Grp Code value which will selected by user while raising the price request</description>
        <label>Ext Matl Grp Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_Matl_Grp__c</fullName>
        <description>To store Ext Matl Grp value which will selected by user while raising the price request</description>
        <label>Ext Matl Grp</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ERP_ID__c</fullName>
        <description>This field acts as an External ID for filtering out non-selective queries</description>
        <externalId>true</externalId>
        <label>External ERP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_Product_Hierarchy_Code__c</fullName>
        <formula>PH1_Code__c &amp; PH2_Code__c &amp; PH3_Code__c &amp; PH4_Code__c &amp; PH5_Code__c &amp; PH6_Code__c &amp; PH7_Code__c &amp; PH8_Code__c &amp; PH9_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Product Hierarchy Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixValDate__c</fullName>
        <label>Fix Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floor_Price_in_USD__c</fullName>
        <label>Floor Price in USD</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gap_Pricing_Request_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gap Pricing Request Item</label>
        <referenceTo>Pricing_Request_Item__c</referenceTo>
        <relationshipLabel>Pricing Request Item</relationshipLabel>
        <relationshipName>Pricing_Request_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inco_terms__c</fullName>
        <label>Incoterms</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms2__c</fullName>
        <label>Incoterms2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incoterms_Code__c</fullName>
        <label>Incoterms Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <label>Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kcode__c</fullName>
        <label>Kcode</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Combination_Code__c</fullName>
        <label>Key Combination Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Combination_SFDC__c</fullName>
        <label>Key Combination SFDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Combination__c</fullName>
        <label>Key Combination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Pricing_Util_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent-child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy Pricing Util SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Market_Segment_Code__c</fullName>
        <label>Market Segment Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Code__c</fullName>
        <label>Material Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_1_Code__c</fullName>
        <label>Material Group 1 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_1__c</fullName>
        <label>Material Group 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_5_Code__c</fullName>
        <label>Material Group 5 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_5_Key_Code__c</fullName>
        <label>Material Group 5 Key Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_5_Key__c</fullName>
        <label>Material Group 5 Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Group_5__c</fullName>
        <label>Material Group 5</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Price_Group_Code__c</fullName>
        <label>Material Price Group Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Price_Group__c</fullName>
        <label>Material Price Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_group_2_Code__c</fullName>
        <description>To store Material group 2 Code value which will selected by user while raising the price request</description>
        <label>Material Group 2 Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_group_2__c</fullName>
        <description>To store Material group 2 value which will selected by user while raising the price request</description>
        <label>Material Group 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Below_Net_Current__c</fullName>
        <label>Materials Below Net Current</label>
        <summaryFilterItems>
            <field>NPC_Request__c.Below_Current_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Response_Error_Code__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>NPC_Request__c.Pricing_Request_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Materials_Below_Net_Floor__c</fullName>
        <label>Materials Below Net Floor</label>
        <summaryFilterItems>
            <field>NPC_Request__c.Below_Floor_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Response_Error_Code__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>NPC_Request__c.Pricing_Request_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Materials_Below_Net_Reference__c</fullName>
        <label>Materials Below Net Reference</label>
        <summaryFilterItems>
            <field>NPC_Request__c.Below_Reference_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Response_Error_Code__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>NPC_Request__c.Pricing_Request_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Materials_with_Error_Response__c</fullName>
        <label>Materials with Error Response</label>
        <summaryFilterItems>
            <field>NPC_Request__c.Count_of_Error_Responses__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>NPC_Request__c.Pricing_Request_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Price_Calculated_Materials__c</fullName>
        <label>Net Price Calculated Materials</label>
        <summaryFilterItems>
            <field>NPC_Request__c.Count_of_NPC_Responses__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>NPC_Request__c.Pricing_Request_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Net_Price_Status__c</fullName>
        <label>Net Price Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting for Net Price</fullName>
                </value>
                <value>
                    <fullName>Net Price Received</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Customer_Price_Payment_Terms__c</fullName>
        <label>New Customer Price Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Payment_Terms_Fixed_Date__c</fullName>
        <label>New Payment Terms Fixed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Per__c</fullName>
        <label>New Per</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Rate__c</fullName>
        <label>New Rate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Unit__c</fullName>
        <label>New Unit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_UoM__c</fullName>
        <label>New UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Valid_From__c</fullName>
        <label>New Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Valid_To__c</fullName>
        <label>New Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Volume_UoM__c</fullName>
        <label>New Volume_UoM</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Volume__c</fullName>
        <label>New Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Commercial_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Commercial Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Novus_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Stores Legacy Id</description>
        <externalId>true</externalId>
        <label>Novus External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Material_with_Gross_Price__c</fullName>
        <label>Number of Material with Gross Price</label>
        <summaryFilterItems>
            <field>NPC_Request__c.Response_Error_Code__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Count_of_NPC_Responses__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>NPC_Request__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>NPC_Request__c.Pricing_Request_Item__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PCKC__c</fullName>
        <formula>Pricing_Condition_Code__c &amp;Sales_Org_Code__c&amp; Dist_Channel_Code__c &amp; Division_Code__c &amp; Sold_To_Code__c &amp; Material_Code__c&amp;F_Product_Hierarchy_Code__c&amp; ShipTo_Code__c &amp; Sales_Office_Code__c &amp; Customer_Price_Group_Code__c &amp; Material_Price_Group_Code__c &amp; Price_List_Type_Code__c&amp; Terms_Of_Payment_Code__c &amp; Disc_Ref__c &amp;End_Use_Code__c&amp; Market_Segment_Code__c&amp; Variant_Code__c&amp; Contract_Code__c &amp; Sales_Order_Type_Code__c &amp; ComPartner_Code__c &amp; Material_Group_5_Key_Code__c &amp; Plant_Code__c &amp; Shipping_Condition_Code__c &amp; Destination_Country_Code__c &amp; Price_Ref_Partner_Code__c &amp; Country_Code__c&amp; End_User_Code__c &amp; Customer_Hierarchy_Code__c &amp; Profit_Center_Code__c &amp; Ship_To_Country_Code__c &amp; Incoterms_Code__c &amp; Kcode__c &amp; Material_Group_1_Code__c &amp; Sales_District_Code__c &amp; Partner_ZF_Code__c &amp; Payer_Code__c &amp; TEXT( FixValDate__c ) &amp; Disc_Ref_No__c &amp; Campaign_Code__c &amp; Document_Currency__c &amp; State_Code__c &amp; Distributor_Code__c &amp; Sales_Order_Item_Code__c &amp; Value_Center_Code__c &amp; Material_group_2_Code__c &amp; Ext_Matl_Grp_Code__c &amp; Price_Zone_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCKC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1_Code__c</fullName>
        <label>PH1 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH1__c</fullName>
        <label>PH1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2_Code__c</fullName>
        <label>PH2 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH2__c</fullName>
        <label>PH2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3_Code__c</fullName>
        <label>PH3 Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH3__c</fullName>
        <label>PH3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ZF_Code__c</fullName>
        <label>Partner ZF Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ZF__c</fullName>
        <label>Partner ZF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer_Code__c</fullName>
        <label>Payer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payer__c</fullName>
        <label>Payer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms_Fixed_Date__c</fullName>
        <label>Payment Terms Fixed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Per__c</fullName>
        <label>Per</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_Code__c</fullName>
        <label>Plant_Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plus_Minus_Code__c</fullName>
        <label>Plus/Minus Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plus_Minus__c</fullName>
        <label>Plus/Minus</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Plus_Minus_Code__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price_List_Type_Code__c</fullName>
        <label>Price List Type Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_Type__c</fullName>
        <label>Price List Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Reduction__c</fullName>
        <description>This field stores the discount on the price of the material</description>
        <label>Price Reduction</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Ref_Partner_Code__c</fullName>
        <label>Price Ref. Partner Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Ref_Partner__c</fullName>
        <label>Price Ref. Partner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Zone_Code__c</fullName>
        <description>To store Price Zone Code value which will selected by user while raising the price request</description>
        <label>Price Zone Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>